progress bar aligned centre and CI errors resolved

--- a/src/components/Reviews/ReviewProgressBar.css
+++ b/src/components/Reviews/ReviewProgressBar.css
@@ -1,6 +1,6 @@
 .progress-container {
     width: 100% ;
-    padding-left: 16%;
+    padding-left: 18%;
     padding-right: 10% ;
     padding-top: 2%;
 
@@ -10,6 +10,7 @@
   }
   .progress-container img{
     height: 50px;
+    margin-left: 15%;
   }
 
   .progress-btn{
@@ -17,8 +18,8 @@
     background-color: white;
   }
   .RSPBprogressBar {
-    margin-top: 7%;
-    margin-left: 0%;
+    margin-top: 13%;
+    margin-left: 5%;
     width:80% ;
     height: 5px; 
     background-color: white
@@ -61,7 +62,7 @@
 
   @media (max-width: 600px) {
     .RSPBprogressBar {
-      margin-top: 35%;
+      margin-top: 40%;
       margin-left: 0%;
       width:90% ;
     }
